# vllmops

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  mypy.ini  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
src/vllmctl/: __init__.py  cli.py  config.py  doctor.py  gpu.py  lifecycle.py  metrics.py  project.py  service.py
src/vllmctl/tui/: __init__.py  app.py
src/vllmctl/tui/widgets/: __init__.py  errors_panel.py  gpu_panel.py  highlighter.py  log_viewer.py  metrics_panel.py  models_table.py  models_tree.py
src/vllmops/: __init__.py  cli.py  config.py  config_errors.py  doctor.py  lifecycle.py  metrics.py  project.py  service.py
src/vllmops/tui/: __init__.py  app.py
src/vllmops/tui/widgets/: __init__.py  _format.py  errors_panel.py  gpu_panel.py  highlighter.py  log_viewer.py  metrics_panel.py  models_tree.py  progress_bar.py
tests/: conftest.py  test_config.py  test_config_errors.py  test_doctor.py  test_gpu.py  test_highlighter.py  test_lifecycle.py  test_metrics.py  test_project.py  test_service.py  test_tui_editor.py
